Up to child routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,8 @@
       [routerLink]="['/products']">Product List</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link">Add Product</a>
+      <a class="nav-link"
+      [routerLink]="['products', 0, 'edit']">Add Product</a>
     </li>
   </ul>
   <ul class="navbar-nav ml-auto">
@@ -23,7 +24,8 @@
     </li>
     <li class="nav-item"
         *ngIf="!isLoggedIn">
-      <a class="nav-link">Log In</a>
+      <a class="nav-link"
+      [routerLink]="['/login']">Log In</a>
     </li>
     <li class="nav-item"
         *ngIf="isLoggedIn">
